fix: do not enable SecurityManager if unsupported for Java 18 and above